# home-server-infra

./: .gitignore  README.md
setup/codex-review/: IMPLEMENTATION_ORDER.md  IMPLEMENTATION_SUMMARY.md  README.md  config.yml  pyproject.toml
setup/codex-review/prompts/common/: github-side-effect-rules.md  json-output-rules.md  language-rules.md  repository-inspection-rules.md  safety-rules.md  workflow-contract.md
setup/codex-review/prompts/design/: design-cluster-analyst.md  (+3 more)
setup/codex-review/schemas/: design-chief-decision.v1.schema.json  design-cluster-analysis.v1.schema.json  design-clusters.v1.schema.json  design-context.v1.schema.json  design-inventory.v1.schema.json  design-plan.v1.schema.json  event-context.v1.schema.json  fix-dispatch-agent-result.v1.schema.json  fix-dispatch-collection-result.v1.schema.json  fix-dispatch-task-manifest.v1.schema.json  fix-merge-merged-fix.v1.schema.json  fix-merge-premerge-report.v1.schema.json  fix-merge-semantic-patch-safety.v1.schema.json  issue-fallback-content.v1.schema.json  loop-state.v1.schema.json  pr-context.v1.schema.json  push-result.v1.schema.json  push-validated-fix.v1.schema.json  reentry-loop-state.v1.schema.json  resolve-gate-lifecycle-result.v1.schema.json  resolve-gate-resolved-memory.v1.schema.json  resolve-gate-result.v1.schema.json  resolve-gate-thread-inventory.v1.schema.json  review-axis-findings.v1.schema.json  review-combined-findings.v1.schema.json  review-memory.v1.schema.json  shared-review-finding.v1.schema.json  techlead-decision.v1.schema.json  techlead-review-publication.v1.schema.json
(+494 files in other folders)
